2005-11-16  Chris Dunlap  <cdunlap@llnl.gov>

	* config/x_ac_debug.m4: Fixed behavior when enable-debug && !CFLAGS.

	* src/munged/zip.c: Added magic sentinel to beginning of zip_meta_t
	  to check if embedded length of original uncompressed data is valid.
	* src/munged/zip.h(zip_compress_block,zip_decompress_block):
	  Changed name of dstlen parm to pdstlen.

	* config/x_ac_debug.m4: Changed behavior to allow existing CFLAGS to
	  be preserved when debugging is enabled.

2005-10-31  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.3.

2005-10-25  Chris Dunlap  <cdunlap@llnl.gov>

	* src/etc/munge.init: Fixed bug with RHEL4-U1's chkconfig where it
	  doesn't handle the existence of a 'Required-Start' without a
	  'Required-Stop' (Thanx to Christopher Holmes).

2005-07-20  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.2.

	* config/x_ac_meta.m4: Removed trailing ';' from m4_pattern_allow.

	* config/x_ac_meta.m4: Added m4_pattern_allow to suppress the
	  "possibly undefined macro" warnings under the new libtool.

2005-07-19  Chris Dunlap  <cdunlap@llnl.gov>

	* : Updated FSF address in copyleft.

	* config/argz.m4, config/libtool.m4, config/ltoptions.m4,
	  config/ltsugar.m4, config/ltversion.m4:
	  Added as a result of upgrading to the cvs HEAD release of libtool.
	* aclocal.m4, config/config.h.in, config/ltmain.sh, configure:
	  Updated as a result of upgrading to the cvs HEAD release of libtool.
	* configure.ac: Replaced AC_PROG_LIBTOOL with LT_INIT for new libtool.
	* : Re-bootstrap'd with the cvs HEAD release of libtool version 2.1a,
	  GNU libtool 1.1984 2005/07/11 12:11:25, in order to fix a bug under
	  AIX where the convenience libs were not being added to libmunge;
	  this appears to be the result of libtool's $whole_archive_flag_spec
	  being set to ' ' instead of ''.  This also fixes a bug in the
	  libtool --mode=link cmd for libmunge that failed to properly expand
	  $allow_undefined_flag, thereby causing $archive_expsym_cmds to